--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,4 +7,12 @@
     <welcome-file-list>
         <welcome-file>start.jsp</welcome-file>
     </welcome-file-list>
+
+    <resource-ref>
+        <description>DBConnection</description>
+        <res-ref-name>jdbc/likeit</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
